# takaichi-blog-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
site/: index.html
src/takaichi_blog_mcp/: __init__.py  config.py  fetch.py  parser.py  search.py  server.py  store.py  wayback.py
tests/: test_fetch.py  test_network.py  test_parser.py  test_search.py  test_server.py  test_store.py  test_wayback.py
tests/fixtures/: 10.html  10.json  1428.html  1428.json  1488.html  1488.json  40.html  40.json  8.html  8.json
