[project]
name = "takaichi-blog-mcp"
version = "0.1.0"
description = "MCP server exposing Sanae Takaichi's archived blog articles fetched from the Wayback Machine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryo KIKUCHI" }]
keywords = ["mcp", "model-context-protocol", "wayback-machine", "takaichi", "blog", "archive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Natural Language :: Japanese",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]

[project.urls]
Homepage = "https://github.com/analekt/takaichi-blog-mcp"
Repository = "https://github.com/analekt/takaichi-blog-mcp"
Issues = "https://github.com/analekt/takaichi-blog-mcp/issues"

[project.scripts]
takaichi-blog-fetch = "takaichi_blog_mcp.fetch:main"
takaichi-blog-mcp = "takaichi_blog_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takaichi_blog_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"
